--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ leetscrape==1.0.1
 markdownify==0.11.6
 marko==1.3.1
 mypy-extensions==1.0.0
-numpy>=1.23.0
+numpy==1.21.6
 openai==1.47.0
 packaging==24.1
 pandas==1.5.3
