--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
 distro==1.9.0
+dj-database-url==2.2.0
 dj-rest-auth==6.0.0
 Django==5.1
 django-allauth==64.1.0
@@ -46,3 +47,4 @@ tqdm==4.66.5
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
+whitenoise==6.7.0
